--- a/src/main/resources/com/openjfx/qllspahg/fxml/ManHinhChinhTest.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/ManHinhChinhTest.fxml
@@ -27,7 +27,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane prefHeight="1000.0" prefWidth="1900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="TestScene" prefHeight="1000.0" prefWidth="1900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.openjfx.qllspahg.gui.Samplecontroller">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
          <menus>
@@ -117,7 +117,7 @@
                   <SeparatorMenuItem mnemonicParsing="false" />
                   <MenuItem mnemonicParsing="false" text="Đổi mật khẩu" />
                   <SeparatorMenuItem mnemonicParsing="false" />
-                  <MenuItem mnemonicParsing="false" text="Đăng xuất" />
+                  <MenuItem fx:id="logOut" mnemonicParsing="false" onAction="#onLogOut" text="Đăng xuất" />
                </items>
             </Menu>
             <Menu mnemonicParsing="false" text="Thống kê">
@@ -254,7 +254,7 @@
                         <Rectangle2D />
                      </viewport>
                      <image>
-                        <Image url="@../images/user/user-solid-60.png" />
+                        <Image url="@../images/icons/user-solid-60.png" />
                      </image>
                   </ImageView>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="20053331">
