--- a/src/main/resources/com/openjfx/qllspahg/fxml/Sample-View.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/Sample-View.fxml
@@ -9,7 +9,7 @@
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
-
+<!--    Dat ten file theo yeu cau TenManHinh-ChucNang-->
     <Label fx:id="welcomeText"/>
     <Button text="Hello!" onAction="#onHelloButtonClick"/>
 </VBox>
