--- a/src/main/resources/com/openjfx/qllspahg/fxml/DangNhap.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/DangNhap.fxml
@@ -15,8 +15,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane minHeight="720.0" minWidth="1280.0" prefHeight="900.0" prefWidth="1600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.openjfx.qllspahg.gui.DangNhapController">
+<AnchorPane fx:id="DangNhap" minHeight="720.0" minWidth="1280.0" prefHeight="900.0" prefWidth="1600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.openjfx.qllspahg.gui.DangNhapController">
    <children>
       <GridPane hgap="20.0" layoutX="899.0" layoutY="228.0" prefHeight="400.0" prefWidth="400.0" vgap="20.0">
         <columnConstraints>
