--- a/src/main/resources/com/openjfx/qllspahg/fxml/ManHinhChinhTest.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/ManHinhChinhTest.fxml
@@ -8,14 +8,8 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SeparatorMenuItem?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -27,7 +21,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="TestScene" prefHeight="1000.0" prefWidth="1900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.openjfx.qllspahg.gui.Samplecontroller">
+<BorderPane fx:id="MainView" prefHeight="1000.0" prefWidth="1900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.openjfx.qllspahg.gui.ManHinhChinhTestController">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
          <menus>
@@ -117,7 +111,7 @@
                   <SeparatorMenuItem mnemonicParsing="false" />
                   <MenuItem mnemonicParsing="false" text="Đổi mật khẩu" />
                   <SeparatorMenuItem mnemonicParsing="false" />
-                  <MenuItem fx:id="logOut" mnemonicParsing="false" onAction="#onLogOut" text="Đăng xuất" />
+                  <MenuItem mnemonicParsing="false" text="Đăng xuất" />
                </items>
             </Menu>
             <Menu mnemonicParsing="false" text="Thống kê">
@@ -154,54 +148,6 @@
          </menus>
       </MenuBar>
    </top>
-   <center>
-      <AnchorPane BorderPane.alignment="CENTER">
-         <children>
-            <ToolBar maxHeight="50.0" maxWidth="1900.0" minHeight="50.0" minWidth="1280.0">
-               <items>
-                  <Button mnemonicParsing="false" text="Làm mới" />
-                  <Button mnemonicParsing="false" text="Lưu" />
-                  <Button mnemonicParsing="false" text="Xóa" />
-                  <Button mnemonicParsing="false" text="Chọn tất cả" />
-                  <Button mnemonicParsing="false" text="Lọc dữ liệu" />
-                  <Button mnemonicParsing="false" text="Tìm kiếm" />
-               </items>
-            </ToolBar>
-            <TabPane layoutY="40.0" prefWidth="1280.0" tabClosingPolicy="UNAVAILABLE">
-               <tabs>
-                  <Tab text="Phân công">
-                     <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0">
-                           <children>
-                              <TableView minHeight="0.0" minWidth="0.0" prefWidth="1280.0">
-                                 <columns>
-                                    <TableColumn prefWidth="75.0" text="C1" />
-                                    <TableColumn prefWidth="75.0" text="C2" />
-                                 </columns>
-                              </TableView>
-                           </children>
-                        </AnchorPane>
-                     </content>
-                  </Tab>
-                  <Tab text="Chấm công">
-                     <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0">
-                           <children>
-                              <TableView layoutY="1.0" minHeight="0.0" minWidth="0.0" prefWidth="1280.0">
-                                 <columns>
-                                    <TableColumn prefWidth="75.0" text="C1" />
-                                    <TableColumn prefWidth="75.0" text="C2" />
-                                 </columns>
-                              </TableView>
-                           </children>
-                        </AnchorPane>
-                     </content>
-                  </Tab>
-               </tabs>
-            </TabPane>
-         </children>
-      </AnchorPane>
-   </center>
    <bottom>
       <HBox id="HBox" alignment="CENTER_LEFT" maxHeight="25.0" minHeight="25.0" prefHeight="25.0" prefWidth="1920.0" spacing="5.0" BorderPane.alignment="CENTER">
          <children>
@@ -221,29 +167,6 @@
          </padding>
       </HBox>
    </bottom>
-   <right>
-      <GridPane prefHeight="945.0" prefWidth="454.0" BorderPane.alignment="CENTER">
-         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-         </columnConstraints>
-         <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-         </rowConstraints>
-         <children>
-            <Label text="Nhập thông tin ">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </Label>
-            <Label text="Thông tin chi tiết" GridPane.rowIndex="1">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </Label>
-         </children>
-      </GridPane>
-   </right>
    <left>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
@@ -304,12 +227,12 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <Button mnemonicParsing="false" prefHeight="46.0" prefWidth="170.0" text="Công Nhân" GridPane.rowIndex="1">
+                  <Button fx:id="btnCongNhan" mnemonicParsing="false" onAction="#btnCongNhan" prefHeight="46.0" prefWidth="170.0" text="Công Nhân" GridPane.rowIndex="1">
                      <font>
                         <Font name="System Bold" size="24.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="46.0" prefWidth="170.0" text="Nhân Viên" GridPane.rowIndex="2">
+                  <Button fx:id="btnNhanVien" mnemonicParsing="false" onAction="#btnNhanVien" prefHeight="46.0" prefWidth="170.0" text="Nhân Viên" GridPane.rowIndex="2">
                      <font>
                         <Font name="System Bold" size="24.0" />
                      </font>
