--- a/src/main/resources/com/openjfx/qllspahg/fxml/ManHinhChinhTest.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/ManHinhChinhTest.fxml
@@ -21,7 +21,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="MainView" prefHeight="1000.0" prefWidth="1900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.openjfx.qllspahg.gui.ManHinhChinhTestController">
+<BorderPane fx:id="MainView" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.openjfx.qllspahg.gui.ManHinhChinhTestController">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
          <menus>
