--- a/src/main/resources/com/openjfx/qllspahg/fxml/HopDong.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/HopDong.fxml
@@ -18,14 +18,10 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-
 
 <TabPane tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
       <tabs>
@@ -33,11 +29,11 @@
          <content>
             <BorderPane>
                <right>
-                  <BorderPane>
+                  <BorderPane BorderPane.alignment="CENTER">
                      <center>
-                        <VBox>
+                        <VBox BorderPane.alignment="CENTER">
                            <children>
-                              <VBox spacing="20.0" style="-fx-border-color: grey;">
+                              <VBox spacing="5.0" style="-fx-border-color: grey;">
                                  <children>
                                     <Label text="Nhập thông tin hợp đồng">
                                        <font>
@@ -107,7 +103,7 @@
                                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                  </VBox.margin>
                               </VBox>
-                              <VBox spacing="20.0" style="-fx-border-color: grey;">
+                              <VBox spacing="5.0" style="-fx-border-color: grey;">
                                  <children>
                                     <Label text="Thêm sản phẩm">
                                        <font>
@@ -177,9 +173,9 @@
                                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                  </VBox.margin>
                               </VBox>
-                              <VBox spacing="20.0" style="-fx-border-color: grey;">
+                              <VBox spacing="5.0" style="-fx-border-color: grey;" VBox.vgrow="ALWAYS">
                                  <children>
-                                    <Label text="Chức năng">
+                                    <Label text="Chức năng" VBox.vgrow="ALWAYS">
                                        <font>
                                           <Font name="System Bold" size="24.0" />
                                        </font>
@@ -187,17 +183,9 @@
                                           <Insets left="20.0" />
                                        </padding>
                                     </Label>
-                                    <GridPane hgap="10.0" prefHeight="100.0" vgap="10.0">
-                                      <columnConstraints>
-                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                      </columnConstraints>
-                                      <rowConstraints>
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                      </rowConstraints>
+                                    <HBox fillHeight="false" spacing="20.0">
                                        <children>
-                                          <Button mnemonicParsing="false" prefHeight="200.0" prefWidth="200.0" text="Xem chi tiết hợp đồng">
+                                          <Button mnemonicParsing="false" text="Tạo mới hợp đồng" HBox.hgrow="ALWAYS">
                                              <graphic>
                                                 <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                                                    <image>
@@ -206,25 +194,7 @@
                                                 </ImageView>
                                              </graphic>
                                           </Button>
-                                          <Button mnemonicParsing="false" prefHeight="200.0" prefWidth="200.0" text="Cập nhật hợp đồng" GridPane.columnIndex="1">
-                                             <graphic>
-                                                <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
-                                                   <image>
-                                                      <Image url="@../images/icons/XoaTrang.png" />
-                                                   </image>
-                                                </ImageView>
-                                             </graphic>
-                                          </Button>
-                                          <Button mnemonicParsing="false" prefHeight="200.0" prefWidth="200.0" text="Tạo mới hợp đồng" GridPane.rowIndex="1">
-                                             <graphic>
-                                                <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
-                                                   <image>
-                                                      <Image url="@../images/icons/add-removebg-preview.png" />
-                                                   </image>
-                                                </ImageView>
-                                             </graphic>
-                                          </Button>
-                                          <Button mnemonicParsing="false" prefHeight="200.0" prefWidth="200.0" text="Thanh lý hợp đồng" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                          <Button mnemonicParsing="false" text="Thanh lý hợp đồng" HBox.hgrow="ALWAYS">
                                              <graphic>
                                                 <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                                                    <image>
@@ -234,7 +204,29 @@
                                              </graphic>
                                           </Button>
                                        </children>
-                                    </GridPane>
+                                    </HBox>
+                                    <HBox fillHeight="false" spacing="20.0">
+                                       <children>
+                                          <Button mnemonicParsing="false" text="Xem chi tiết hợp đồng" HBox.hgrow="ALWAYS">
+                                             <graphic>
+                                                <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
+                                                   <image>
+                                                      <Image url="@../images/icons/add-removebg-preview.png" />
+                                                   </image>
+                                                </ImageView>
+                                             </graphic>
+                                          </Button>
+                                          <Button mnemonicParsing="false" text="Cập nhật hợp đồng" HBox.hgrow="ALWAYS">
+                                             <graphic>
+                                                <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
+                                                   <image>
+                                                      <Image url="@../images/icons/XoaTrang.png" />
+                                                   </image>
+                                                </ImageView>
+                                             </graphic>
+                                          </Button>
+                                       </children>
+                                    </HBox>
                                  </children>
                                  <padding>
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -323,7 +315,7 @@
                   </Pane>
                </top>
                <bottom>
-                  <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                  <ToolBar BorderPane.alignment="CENTER">
                      <items>
                         <Button mnemonicParsing="false" text="Làm mới">
                            <graphic>
