--- a/src/main/resources/com/openjfx/qllspahg/fxml/ManHinhChinhTest.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/ManHinhChinhTest.fxml
@@ -21,7 +21,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="MainView" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.openjfx.qllspahg.gui.ManHinhChinhTestController">
+<BorderPane fx:id="guiChinh" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.openjfx.qllspahg.gui.ManHinhChinhTestController">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
          <menus>
@@ -125,20 +125,6 @@
                   <MenuItem mnemonicParsing="false" text="Thống kê" />
                </items>
             </Menu>
-            <Menu mnemonicParsing="false" text="template">
-               <items>
-                  <MenuItem mnemonicParsing="false" text="Undo" />
-                  <MenuItem mnemonicParsing="false" text="Redo" />
-                  <SeparatorMenuItem mnemonicParsing="false" />
-                  <MenuItem mnemonicParsing="false" text="Cut" />
-                  <MenuItem mnemonicParsing="false" text="Copy" />
-                  <MenuItem mnemonicParsing="false" text="Paste" />
-                  <MenuItem mnemonicParsing="false" text="Delete" />
-                  <SeparatorMenuItem mnemonicParsing="false" />
-                  <MenuItem mnemonicParsing="false" text="Select All" />
-                  <MenuItem mnemonicParsing="false" text="Unselect All" />
-               </items>
-            </Menu>
             <Menu mnemonicParsing="false" text="Trợ giúp">
                <items>
                   <MenuItem mnemonicParsing="false" text="Tài liệu hướng dẫn" />
@@ -149,9 +135,9 @@
       </MenuBar>
    </top>
    <bottom>
-      <HBox id="HBox" alignment="CENTER_LEFT" maxHeight="25.0" minHeight="25.0" prefHeight="25.0" prefWidth="1920.0" spacing="5.0" BorderPane.alignment="CENTER">
+      <HBox id="HBox" alignment="CENTER_LEFT" maxHeight="25.0" minHeight="25.0" prefHeight="25.0" prefWidth="1920.0" spacing="5.0" style="-fx-background-color: grey;" BorderPane.alignment="CENTER">
          <children>
-            <Label maxHeight="1.7976931348623157E308" maxWidth="-1.0" text="Số cột" HBox.hgrow="ALWAYS">
+            <Label maxHeight="1.7976931348623157E308" maxWidth="-1.0" text="Thời gian làm việc" HBox.hgrow="ALWAYS">
                <font>
                   <Font size="11.0" fx:id="x3" />
                </font>
@@ -160,7 +146,7 @@
                </textFill>
             </Label>
             <Pane maxHeight="25.0" minHeight="25.0" prefHeight="25.0" prefWidth="-1.0" HBox.hgrow="ALWAYS" />
-            <Label font="$x3" maxWidth="-1.0" text="Tổng" textFill="$x4" HBox.hgrow="NEVER" />
+            <Label font="$x3" maxWidth="-1.0" text="Ngày giờ" textFill="$x4" HBox.hgrow="NEVER" />
          </children>
          <padding>
             <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
@@ -168,9 +154,9 @@
       </HBox>
    </bottom>
    <left>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+      <VBox BorderPane.alignment="CENTER">
          <children>
-            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="170.0">
+            <VBox alignment="CENTER" VBox.vgrow="ALWAYS">
                <children>
                   <ImageView fitHeight="64.0" fitWidth="64.0" pickOnBounds="true" preserveRatio="true" VBox.vgrow="NEVER">
                      <viewport>
@@ -190,7 +176,7 @@
                         <Font size="16.0" />
                      </font>
                   </Text>
-                  <GridPane prefHeight="90.0" prefWidth="97.0" VBox.vgrow="NEVER">
+                  <GridPane VBox.vgrow="NEVER">
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="80.0" minWidth="10.0" prefWidth="50.0" />
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="119.0" minWidth="10.0" prefWidth="100.0" />
@@ -201,10 +187,10 @@
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                      </rowConstraints>
                      <children>
-                        <Label prefHeight="48.0" prefWidth="85.0" text="Phòng:" GridPane.rowIndex="1" />
-                        <Label prefHeight="65.0" prefWidth="85.0" text="Chức vụ:" GridPane.rowIndex="2" />
-                        <Label prefHeight="30.0" prefWidth="240.0" text="Hành chính" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <Label prefHeight="30.0" prefWidth="175.0" text="Quản lý sản xuất" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <Label text="Phòng:" GridPane.rowIndex="1" />
+                        <Label text="Chức vụ:" GridPane.rowIndex="2" />
+                        <Label text="Hành chính" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Label text="Quản lý sản xuất" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                      </children>
                      <padding>
                         <Insets left="10.0" right="10.0" />
@@ -227,37 +213,37 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <Button fx:id="btnCongNhan" mnemonicParsing="false" onAction="#btnCongNhan" prefHeight="46.0" prefWidth="170.0" text="Công Nhân" GridPane.rowIndex="1">
+                  <Button fx:id="btnCongNhan" mnemonicParsing="false" onAction="#ChangeSceneCongNhan" prefHeight="46.0" prefWidth="170.0" text="Công Nhân" GridPane.rowIndex="1">
                      <font>
                         <Font name="System Bold" size="24.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btnNhanVien" mnemonicParsing="false" onAction="#btnNhanVien" prefHeight="46.0" prefWidth="170.0" text="Nhân Viên" GridPane.rowIndex="2">
+                  <Button fx:id="btnNhanVien" mnemonicParsing="false" onAction="#ChangeSceneNhanVien" prefHeight="46.0" prefWidth="170.0" text="Nhân Viên" GridPane.rowIndex="2">
                      <font>
                         <Font name="System Bold" size="24.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="46.0" prefWidth="170.0" text="Sản Phẩm" GridPane.rowIndex="3">
+                  <Button fx:id="btnSanPham" mnemonicParsing="false" onAction="#ChangeSceneSanPham" prefHeight="46.0" prefWidth="170.0" text="Sản Phẩm" GridPane.rowIndex="3">
                      <font>
                         <Font name="System Bold" size="24.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="46.0" prefWidth="170.0" text="Hợp Đồng" GridPane.rowIndex="4">
+                  <Button fx:id="btnHopDong" mnemonicParsing="false" onAction="#ChangeSceneHopDong" prefHeight="46.0" prefWidth="170.0" text="Hợp Đồng" GridPane.rowIndex="4">
                      <font>
                         <Font name="System Bold" size="24.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="46.0" prefWidth="170.0" text="Thống Kê" GridPane.rowIndex="5">
+                  <Button fx:id="btnThongKe" mnemonicParsing="false" onAction="#ChangeSceneThongKe" prefHeight="46.0" prefWidth="170.0" text="Thống Kê" GridPane.rowIndex="5">
                      <font>
                         <Font name="System Bold" size="24.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="46.0" prefWidth="170.0" text="Công Nhân" GridPane.rowIndex="6">
+                  <Button mnemonicParsing="false" prefHeight="46.0" prefWidth="170.0" text="sample" GridPane.rowIndex="6">
                      <font>
                         <Font name="System Bold" size="24.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="46.0" prefWidth="170.0" text="Công Nhân" GridPane.rowIndex="7">
+                  <Button mnemonicParsing="false" prefHeight="46.0" prefWidth="170.0" text="Sample" GridPane.rowIndex="7">
                      <font>
                         <Font name="System Bold" size="24.0" />
                      </font>
