--- a/src/main/resources/com/openjfx/qllspahg/fxml/CongNhan.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/CongNhan.fxml
@@ -441,71 +441,85 @@
                   </SplitPane>
                </center>
                <top>
-                  <HBox alignment="CENTER_LEFT" spacing="20.0" BorderPane.alignment="CENTER">
+                  <VBox BorderPane.alignment="CENTER">
                      <children>
-                        <HBox alignment="CENTER" spacing="10.0">
+                        <HBox alignment="CENTER_LEFT" spacing="20.0">
                            <children>
-                              <Label text="Sản phẩm" />
-                              <ComboBox prefHeight="26.0" prefWidth="70.0" />
-                           </children>
-                           <padding>
-                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                           </padding>
-                        </HBox>
-                        <HBox alignment="CENTER" spacing="10.0">
-                           <children>
-                              <Label text="Công đoạn" />
-                              <ComboBox prefHeight="26.0" prefWidth="125.0" />
-                           </children>
-                           <padding>
-                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                           </padding>
-                        </HBox>
-                        <HBox alignment="CENTER" spacing="10.0">
-                           <children>
-                              <Label text="Tổ sản xuất:" />
-                              <ComboBox prefHeight="26.0" prefWidth="183.0" />
-                           </children>
-                           <padding>
-                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                           </padding>
-                        </HBox>
-                        <HBox alignment="CENTER" spacing="5.0">
-                           <children>
-                              <Label text="Ngày bắt đầu:" />
-                              <DatePicker HBox.hgrow="ALWAYS" />
-                           </children>
-                           <padding>
-                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                           </padding>
-                        </HBox>
-                        <HBox>
-                           <children>
-                              <HBox alignment="CENTER" spacing="5.0">
+                              <HBox alignment="CENTER" spacing="10.0">
                                  <children>
-                                    <Label text="Ngày kết thúc:" />
-                                    <DatePicker HBox.hgrow="ALWAYS" />
+                                    <Label text="Sản phẩm" />
+                                    <ComboBox prefHeight="26.0" prefWidth="70.0" />
+                                 </children>
+                                 <padding>
+                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                 </padding>
+                              </HBox>
+                              <HBox alignment="CENTER" spacing="10.0">
+                                 <children>
+                                    <Label text="Công đoạn" />
+                                    <ComboBox prefHeight="26.0" prefWidth="125.0" />
+                                 </children>
+                                 <padding>
+                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                 </padding>
+                              </HBox>
+                              <HBox alignment="CENTER" spacing="10.0">
+                                 <children>
+                                    <Label text="Tổ sản xuất:" />
+                                    <ComboBox prefHeight="26.0" prefWidth="183.0" />
                                  </children>
                                  <padding>
                                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                  </padding>
                               </HBox>
                            </children>
+                           <padding>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </padding>
                         </HBox>
-                        <Button mnemonicParsing="false" text="Tạo phân công">
-                           <graphic>
-                              <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../images/icons/add-removebg-preview.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
-                        </Button>
+                        <HBox alignment="CENTER_LEFT" spacing="40.0">
+                           <children>
+                              <HBox>
+                                 <children>
+                                    <HBox alignment="CENTER" spacing="5.0">
+                                       <children>
+                                          <Label text="Ngày kết thúc:" />
+                                          <DatePicker HBox.hgrow="ALWAYS" />
+                                       </children>
+                                       <padding>
+                                          <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                       </padding>
+                                    </HBox>
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER" spacing="5.0">
+                                 <children>
+                                    <Label text="Ngày bắt đầu:" />
+                                    <DatePicker HBox.hgrow="ALWAYS" />
+                                 </children>
+                                 <padding>
+                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                 </padding>
+                              </HBox>
+                              <Button mnemonicParsing="false" text="Tạo phân công">
+                                 <graphic>
+                                    <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../images/icons/add-removebg-preview.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </Button>
+                           </children>
+                           <padding>
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                           </padding>
+                           <VBox.margin>
+                              <Insets bottom="5.0" />
+                           </VBox.margin>
+                        </HBox>
                      </children>
-                     <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </padding>
-                  </HBox>
+                  </VBox>
                </top>
                <bottom>
                   <HBox alignment="CENTER_LEFT" fillHeight="false" spacing="20.0" BorderPane.alignment="CENTER">
@@ -746,7 +760,7 @@
                                     <children>
                                         <HBox alignment="CENTER" spacing="10.0">
                                             <children>
-                                                <Label text="Mã công nhân" />
+                                                <Label text="Mã công nhân:" />
                                                 <TextField prefHeight="26.0" prefWidth="152.0" />
                                             </children>
                                             <padding>
@@ -755,7 +769,7 @@
                                         </HBox>
                                         <HBox alignment="CENTER" spacing="10.0">
                                             <children>
-                                                <Label text="Tên công nhân" />
+                                                <Label text="Tên công nhân:" />
                                                 <TextField prefHeight="26.0" prefWidth="152.0" />
                                             </children>
                                             <padding>
@@ -764,7 +778,7 @@
                                         </HBox>
                                         <HBox alignment="CENTER" spacing="10.0">
                                             <children>
-                                                <Label text="Ngày chấm công" />
+                                                <Label text="Ngày chấm công:" />
                                                 <DatePicker />
                                             </children>
                                             <padding>
@@ -773,7 +787,7 @@
                                         </HBox>
                                         <HBox alignment="CENTER" prefHeight="30.0" prefWidth="270.0" spacing="10.0">
                                             <children>
-                                                <Label text="Phòng ban: " />
+                                                <Label text="Tổ sản xuất:" />
                                                 <ComboBox prefHeight="26.0" prefWidth="154.0" />
                                             </children>
                                             <padding>
