--- a/src/main/resources/com/openjfx/qllspahg/fxml/CongNhan.fxml
+++ b/src/main/resources/com/openjfx/qllspahg/fxml/CongNhan.fxml
@@ -22,7 +22,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<TabPane tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<TabPane tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.openjfx.qllspahg.gui.CongNhanControler">
     <tabs>
         <Tab text="Quản lý công nhân">
             <content>
@@ -32,7 +32,7 @@
                             <items>
                                 <ScrollPane fitToHeight="true" fitToWidth="true">
                                     <content>
-                                        <TableView editable="true">
+                                        <TableView editable="true" prefHeight="300.0">
                                             <columns>
                                                 <TableColumn prefWidth="133.60003048181534" text="Mã công nhân" />
                                                 <TableColumn minWidth="-1.0" prefWidth="81.59994506835938" text="Họ" />
@@ -46,7 +46,7 @@
                                 </ScrollPane>
                                 <ScrollPane fitToHeight="true" fitToWidth="true">
                                     <content>
-                                        <TableView editable="true" tableMenuButtonVisible="true">
+                                        <TableView editable="true" prefHeight="300.0" tableMenuButtonVisible="true">
                                             <columns>
                                                 <TableColumn prefWidth="96.80001217126846" text="Mã công nhân" />
                                                 <TableColumn minWidth="-1.0" prefWidth="93.60000610351562" text="Họ và tên" />
@@ -282,7 +282,7 @@
                                     </ImageView>
                                  </graphic>
                               </Button>
-                              <Button fx:id="btnXoaTTNhanVien" mnemonicParsing="false"  prefHeight="30.0" prefWidth="94.0" text="Xóa">
+                              <Button fx:id="btnXoaTTNhanVien" mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Xóa">
                                  <graphic>
                                     <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
@@ -439,7 +439,7 @@
                <bottom>
                   <HBox alignment="CENTER_LEFT" fillHeight="false" spacing="20.0" BorderPane.alignment="CENTER">
                      <children>
-                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Reset">
+                        <Button fx:id="btnResetPhanCongCongNhan" mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Reset">
                            <graphic>
                               <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
@@ -448,9 +448,9 @@
                               </ImageView>
                            </graphic>
                         </Button>
-                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Lưu">
+                        <Button fx:id="btnLuu" mnemonicParsing="false" prefHeight="30.0" prefWidth="94.0" text="Lưu">
                            <graphic>
-                              <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="btnLuuPhanCongCongNhan" fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../images/icons/save.png" />
                                  </image>
@@ -464,28 +464,29 @@
                   </HBox>
                </bottom>
                <center>
-                  <SplitPane dividerPositions="0.5, 0.5" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
+                  <SplitPane dividerPositions="0.5, 0.5" orientation="VERTICAL" BorderPane.alignment="CENTER">
                      <items>
-                        <SplitPane dividerPositions="0.5, 0.5" maxHeight="200.0" minHeight="200.0" prefHeight="200.0">
+                        <SplitPane dividerPositions="0.5, 0.5" maxHeight="200.0">
                            <items>
-                              <TableView maxWidth="-Infinity">
+                              <TableView fx:id="tblViewTTSanPhamPhanCongCongNhan" maxWidth="-Infinity" minWidth="-Infinity">
                                 <columns>
-                                  <TableColumn prefWidth="217.6000000119211" text="Mã sản phẩm" />
-                                  <TableColumn prefWidth="156.79995727539062" text="Tên sản phẩm" />
+                                    <TableColumn fx:id="colMaSanPhamPhanCongCongNhan1" prefWidth="125.59996949434299" text="Mã sản phẩm" />
+                                  <TableColumn fx:id="colMaSanPhamPhanCongCongNhan" prefWidth="128.80001831054688" text="Tên sản phẩm" />
+                                  <TableColumn fx:id="colTenSanPhamPhanCongCongNhan" prefWidth="110.4000183105469" text="Số lượng làm" />
                                 </columns>
                               </TableView>
-                              <TableView maxWidth="-Infinity">
+                              <TableView fx:id="tblViewTTCongDoanPhanCongCongNhan" maxWidth="-Infinity" minWidth="-Infinity">
                                 <columns>
-                                  <TableColumn prefWidth="128.0000289916993" text="Mã công đoạn" />
-                                    <TableColumn prefWidth="118.4000244140625" text="Tên sản phẩm" />
-                                  <TableColumn minWidth="0.0" prefWidth="136.800048828125" text="Tên công đoạn" />
+                                  <TableColumn fx:id="colMaCongDoanPhanCongCongNhan" prefWidth="165.5999999999999" text="Mã công đoạn" />
+                                    <TableColumn fx:id="colTenSanPhamCDPhanCongCongNhan" prefWidth="245.60003662109375" text="Tên sản phẩm" />
+                                  <TableColumn fx:id="colTenCongDoanPhanCongCongNhan" minWidth="0.0" prefWidth="192.79989624023438" text="Tên công đoạn" />
                                 </columns>
                               </TableView>
-                              <TableView>
+                              <TableView fx:id="tblViewTTToPhanCongCongNhan" minWidth="-Infinity">
                                 <columns>
-                                  <TableColumn prefWidth="82.40002288818323" text="Mã tổ" />
-                                    <TableColumn prefWidth="81.59998321533203" text="Tên tổ" />
-                                    <TableColumn prefWidth="216.79998779296875" text="Số lượng người có trong tổ" />
+                                  <TableColumn fx:id="colMaToPhanCongCongNhan" prefWidth="172.00000305175854" text="Mã tổ" />
+                                    <TableColumn fx:id="colTenToPhanCongCongNhan" prefWidth="91.99998474121094" text="Tên tổ" />
+                                    <TableColumn fx:id="colSoLuongNguoiTrongToPhanCongCongNhan" prefWidth="194.4000244140625" text="Số lượng người có trong tổ" />
                                 </columns>
                               </TableView>
                            </items>
@@ -495,19 +496,19 @@
                               <HBox alignment="CENTER_LEFT" spacing="10.0">
                                  <children>
                                     <Label text="Ngày phân công:" />
-                                    <DatePicker />
-                                 </children>
-                              </HBox>
-                              <HBox alignment="CENTER_LEFT" spacing="10.0">
-                                 <children>
-                                    <Label text="Ngày kết thúc:" />
-                                    <DatePicker />
+                                    <DatePicker fx:id="datepickNgayPhanCong" />
                                  </children>
                               </HBox>
                               <HBox alignment="CENTER_LEFT" spacing="10.0">
                                  <children>
                                     <Label text="Số lương phân công tự động cho mỗi công nhân" />
-                                    <TextField />
+                                    <TextField fx:id="tfSoLuongPhanCongTungNguoi" />
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER_LEFT" spacing="10.0">
+                                 <children>
+                                    <Label text="Ngày kết thúc:" />
+                                    <DatePicker fx:id="datepickNgayKetThuc" />
                                  </children>
                               </HBox>
                               <Button mnemonicParsing="false" text="Phân công">
@@ -523,20 +524,49 @@
                            <padding>
                               <Insets bottom="5.0" left="5.0" top="5.0" />
                            </padding></HBox>
-                        <TableView maxHeight="400.0" minHeight="400.0" prefHeight="400.0">
-                          <columns>
-                            <TableColumn prefWidth="133.599969494343" text="Mã chấm công" />
-                            <TableColumn minWidth="0.0" prefWidth="150.4000244140625" text="Ngày phân công" />
-                              <TableColumn prefWidth="133.599969494343" text="Tên sản phẩm" />
-                              <TableColumn prefWidth="107.99993896484375" text="Tên công đoạn" />
-                              <TableColumn prefWidth="72.79998779296875" text="Tổ" />
-                              <TableColumn prefWidth="131.2000732421875" text="Họ và tên" />
-                              <TableColumn prefWidth="123.20001220703125" text="Số lượng làm" />
-                          </columns>
-                        </TableView>
+                        <SplitPane dividerPositions="0.5">
+                           <items>
+                              <TableView fx:id="tblViewTTPhanCongTungCongNhan" maxWidth="-Infinity" minWidth="-Infinity">
+                                <columns>
+                                  <TableColumn fx:id="colMaChamCongTTPhanCongTungCongNhan" prefWidth="133.599969494343" text="Mã chấm công" />
+                                  <TableColumn fx:id="colNgayPhamCongChamCongTTPhanCongTungCongNhan" minWidth="0.0" prefWidth="150.4000244140625" text="Ngày phân công" />
+                                    <TableColumn fx:id="colTenSanPhamTTPhanCongTungCongNhan" prefWidth="133.599969494343" text="Tên sản phẩm" />
+                                    <TableColumn fx:id="colTenCongDoanTTPhanCongTungCongNhan" prefWidth="107.99993896484375" text="Tên công đoạn" />
+                                    <TableColumn fx:id="colToTTPhanCongTungCongNhan" prefWidth="72.79998779296875" text="Tổ" />
+                                    <TableColumn fx:id="colHovaTenTTPhanCongTungCongNhan" prefWidth="131.2000732421875" text="Họ và tên" />
+                                    <TableColumn fx:id="colSoLuongLamTTPhanCongTungCongNhan" prefWidth="123.20001220703125" text="Số lượng làm" />
+                                    <TableColumn fx:id="colNgayKetThucTTPhanCongTungCongNhan" prefWidth="123.20001220703125" text="Ngày kết thúc" />
+                                </columns>
+                              </TableView>
+                              <TableView fx:id="tblViewTTPhanCongToCongNhan">
+                                <columns>
+                                  <TableColumn fx:id="colNgayPhanCongTTPhanCongToCongNhan" prefWidth="110.39990081787073" text="Ngày phân công" />
+                                  <TableColumn fx:id="colToTTPhanCongToCongNhan" prefWidth="64.80005645751953" text="Tổ" />
+                                    <TableColumn fx:id="colTongSoLuongLamTTPhanCongToCongNhan" prefWidth="216.0" text="Tổng số lượng đã phân công cho tổ" />
+                                    <TableColumn fx:id="colNgayKetThucTTPhanCongToCongNhan" prefWidth="104.7999267578125" text="Ngày kết thúc" />
+                                </columns>
+                              </TableView>
+                           </items>
+                        </SplitPane>
                      </items>
                   </SplitPane>
                </center>
+               <top>
+                  <HBox alignment="CENTER_LEFT" spacing="20.0" BorderPane.alignment="CENTER">
+                     <children>
+                        <HBox alignment="CENTER_LEFT" spacing="20.0">
+                           <children>
+                              <Label text="Hợp đồng: " />
+                              <ComboBox fx:id="cbxLayTTHopDongPhanCongCongNh" prefWidth="150.0" />
+                           </children>
+                        </HBox>
+                        <Button fx:id="btnLayDuLieuPhanCongCongNhan" mnemonicParsing="false" onAction="#LayDuLeiuPhanCongCongNhanmaHD" text="Lấy dữ liệu" />
+                     </children>
+                     <padding>
+                        <Insets bottom="5.0" left="10.0" top="5.0" />
+                     </padding>
+                  </HBox>
+               </top>
             </BorderPane>
          </content>
       </Tab>
